# advanced-mlops

./: .env  .gitignore  README.md  pyproject.toml
api/: bentofile.yaml  requirements.txt  services.py
api/docker/: Dockerfile  docker-compose.yml
api/src/: db.py  models.py  schemas.py
db/: docker-compose.yml
db/data/: credit_score.csv  customer_info.csv
db/docker-entrypoint-initdb.d/: 01_create_table.sql  02_load_data.sql
pipelines/continuous_deployment/: continuous_deployment_dag.py
pipelines/continuous_training/: continuous_training_dag.py
pipelines/continuous_training/data_extract/: features.sql
pipelines/continuous_training/data_preprocessing/: preprocessor.py
pipelines/continuous_training/docker/: Dockerfile  docker-compose.yml  requirements.txt
pipelines/continuous_training/training/: trainer.py
pipelines/tutorial/: first_dag.py
tests/: locust_load_test.py
utils/: common.py  dates.py
